와카바의 프로필을 추가

--- a/member.html
+++ b/member.html
@@ -42,6 +42,7 @@
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
+		<p>신입생. 웹디자이너가 되는 것이 꿈</p>
       </div>
     </div>
 
